# app-api

./: README.md  pyproject.toml
config/: api.py  settings.py  urls.py
customer/: admin.py  api.py  models.py  urls.py  views.py
customer/migrations/: 0001_initial.py
customer/static/js/: customer.js
customer/templates/customer/: base.html  customer_list.html
